test/modules/packages/Crypto/saru/kdf/pbkdf2-2.good
pbkdf2-2.chpl:4: error: halt reached - Invalid key size specified.
